@@ -21,6 +21,7 @@
 - Fixed double fclose() using AMDGPU-Pro on sysfs compatible platform: Leading to segfault
 - Fixed kernel loops in --increment mode leading to slower performance
 - Fixed custom char parsing code in maskfiles in --increment mode: Custom charset wasn't used
+- Fixed hex output of plaintext in case --outfile-format 4, 5, 6 or 7 was used
 - Removed access to readlink() on FreeBSD: Causes problem building hashcat
 
 ##
